changed the last sentence of the 'Functions: The Basics' page and changed the color of the top nav buttons for mobile

--- a/Functions_TheBasics.html
+++ b/Functions_TheBasics.html
@@ -97,7 +97,7 @@
                         </li>
                     </ul>
                     While we've introduced functions as sets, throughout the course we focus exclusively on functions whose rules can be written as equations.
-                    Thus, a function is defined by an equation but a function is not the equation itself. Additional practice on functions is given in Problem Set 1,
+                    Thus, a function is defined by an equation but a function is not the equation itself. No additional practice on functions will be given in Problem Set 1,
                     at the end of Lesson 1.
                 </p>
             </div>
