Update LimitTechniques.html - fixed a typo in the “derivatives.html” name

--- a/LimitTechniques.html
+++ b/LimitTechniques.html
@@ -237,7 +237,7 @@
                 <button onclick="window.location.href='UndefinedLimits.html'" class="previous_button">
                     Previous: Inifinity as a Limit, Undefined Limits, Continuity, and Trigonometric Limits
                 </button>
-                <button onclick="window.location.href='derivative.html'" class="next_button">
+                <button onclick="window.location.href='derivatives.html'" class="next_button">
                     Next: <b>Lesson 2: Derivatives</b>
                 </button>
             </div>
