Update UndefinedLimits.html, changed one of the Latex equations to be more clear.

--- a/UndefinedLimits.html
+++ b/UndefinedLimits.html
@@ -175,10 +175,10 @@
                     The first limit has \(\theta\) going to \(0\), thus we zoom into the circle and start decreasing the angle:
                     <img id="invert" class="figure" src="UndefinedLimits_Figure6.png" alt="A zoom in on the circle from the previous figure, showing the angle decreasing." style="width: 40%;">
                     <br>
-                    The main idea here is that as \(\theta\) decreases, goes to \(0\), \(\sin(\theta)=s=\theta\). This is a small angle approximation. Thus, \(\frac{\sin(\theta)}{\theta}=1\) and
+                    The main idea here is that as \(\theta\) decreases, goes to \(0\), \(\sin(\theta)=s=\theta\). This is a small angle approximation. Thus, \(\frac{\sin(\theta)}{\theta}=\frac{\theta}{\theta}=1\) and
                     \(\lim_{\theta\to 0}\frac{\sin(\theta)}{\theta} = 1\).
                     <br><br>
-                    Moving on to the second limit, the one involving the \(\cos\), we start off again with the same circle of radius \(1\) and labeling the arc length of the angle \(\theta\). However,
+                    Moving on to the second limit, the one involving \(\cos\), we start off again with the same circle of radius \(1\) and labeling the arc length of the angle \(\theta\). However,
                     because we are now involving a \(\cos\) we label the adjacent side to the angle \(\theta\) instead of the opposite. We label the side \(\cos(\theta)\). Note that because the length of
                     the radius is \(1\), the remaining length of the radius along the adjacent side of the angle would be \(1-\cos(\theta)\):
                     <img id="invert" class="figure" src="UndefinedLimits_Figure7.png" alt="A figure of a circle with radius 1, labeling the arc length and the adjacent side." style="width: 30%;">
