Organized site structure

--- a/courses/SingleVariableCalc/pages/Functions_TheBasics.html
+++ b/courses/SingleVariableCalc/pages/Functions_TheBasics.html
@@ -2,24 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="Free Single Variable Calculus University course: Functions">
-        <meta name="keywords" content="MathWise, Institute, MathWise Institute, Calculus, Functions">
         <meta name="author" content="Agustin Garcia Flores">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
-            Functions: The Basics | Single Variable Calculus | MWi - MathWise Institute
+            Functions: The Basics | Single Variable Calculus | MWi
         </title>
-        <link rel="stylesheet" href="Main_Head.css">
-        <link rel="stylesheet" href="Body_style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../../../styles/Main_Head.css">
+        <link rel="stylesheet" href="../../../styles/Body_style.css">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-        <script id="MathJax-script" async
-          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-        </script>
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
     <body class="Whole">
         <div>
-            <button onclick="window.location.href='index.html'" class="Title_image"></button>
+            <button onclick="window.location.href='../../../landing/index.html'" class="Title_image"></button>
             <button id="menuButton" class="menuButton" aria-controls="primary-navigation" aria-expanded="false">
                 <svg class="hamburger" viewBox="0 0 100 100" width="40" height="40">
                     <rect class="line top" width="80" height="10" x="10" y="25" rx="5"></rect>
@@ -29,17 +24,11 @@
             </button>
             <hr id="Title_Border1">
             <div id="menu" class="menuClass">
-                <button onclick="window.location.href='index.html';" class="Top_Nav_Button">
-                    Home
-                </button>
                 <button onclick="window.location.href='#';" class="Top_Nav_Button">
                     Courses
                 </button>
-                <button onclick="window.location.href='about.html';" class="Top_Nav_Button">
-                    About
-                </button>
             </div>
-            <script src="menuButton.js"></script>
+            <script src="../../../javascript/menuButton.js"></script>
         </div>
         <hr id="Title_Border2">
         <div class="Body">
@@ -72,7 +61,7 @@
                     also known as a <b>surjective function</b> or <b>onto</b>, is a function where every output value comes From
                     at least one input value. A <b>bijection</b> is a function that is both an injection and a surjection.
                     <br><br>
-                    <img id="invert" class="bigFigure" src="Types_of_functions.png" alt="Images of the different types of fuctions">
+                    <img id="invert" class="bigFigure" src="../figures/Types_of_functions.png" alt="Images of the different types of fuctions">
                     <br><br>
                     From the image above:
                     <ul>
