--- a/courses/SingleVariableCalc/pages/LimitTechniques.html
+++ b/courses/SingleVariableCalc/pages/LimitTechniques.html
@@ -2,22 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="Free Single Variable Calculus University course">
-        <meta name="keywords" content="MathWise, Institute, MathWise Institute, Calculus, Limits, Techniques">
         <meta name="author" content="Agustin Garcia Flores">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
             Evaluating Limits | Single Variable Calculus | MWi - MathWise Institute
         </title>
-        <link rel="stylesheet" href="Main_Head.css">
-        <link rel="stylesheet" href="Body_style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../../../styles/Main_Head.css">
+        <link rel="stylesheet" href="../../../styles/Body_style.css">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
     <body class="Whole">
         <div>
-            <button onclick="window.location.href='index.html'" class="Title_image"></button>
+            <button onclick="window.location.href='../../../landing/index.html'" class="Title_image"></button>
             <button id="menuButton" class="menuButton" aria-controls="primary-navigation" aria-expanded="false">
                 <svg class="hamburger" viewBox="0 0 100 100" width="40" height="40">
                     <rect class="line top" width="80" height="10" x="10" y="25" rx="5"></rect>
@@ -27,17 +24,11 @@
             </button>
             <hr id="Title_Border1">
             <div id="menu" class="menuClass">
-                <button onclick="window.location.href='index.html';" class="Top_Nav_Button">
-                    Home
-                </button>
                 <button onclick="window.location.href='#';" class="Top_Nav_Button">
                     Courses
                 </button>
-                <button onclick="window.location.href='about.html';" class="Top_Nav_Button">
-                    About
-                </button>
             </div>
-            <script src="menuButton.js"></script>
+            <script src="../../../javascript/menuButton.js"></script>
         </div>
         <hr id="Title_Border2">
         <div class="Body">
@@ -222,7 +213,7 @@
                         </li>
                     </ol>
                     <h4>Lesson Conclusion</h4>
-                    That concludes the section on limits. More practice can be found in <a href="ProblemSet1.pdf">Problem Set 1</a>, and the solutions to it found <a href="ProblemSet1Solutions.pdf">here</a>. Most of the mathematical
+                    That concludes the section on limits. More practice can be found in <a href="../problem_sets/ProblemSet1.pdf">Problem Set 1</a>, and the solutions to it found <a href="../problem_sets/ProblemSet1Solutions.pdf">here</a>. Most of the mathematical
                     understanding comes from the problem sets, while the lessons are mainly the theory. Additional resources on limits can be found below as well.
                     <br><br>
                     <h4>Problem Set 1</h4>
@@ -247,5 +238,5 @@
             </div>
         </div>
     </body>
-    <script src="solutionToggle.js"></script>
+    <script src="../../../javascript/solutionToggle.js"></script>
 </html>
