Fixed placement of index.html file

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <title>
             MWi - MathWise
         </title>
-        <link rel="stylesheet" href="../styles/Main_Head.css">
-        <link rel="stylesheet" href="../styles/Body_style.css">
+        <link rel="stylesheet" href="styles/Main_Head.css">
+        <link rel="stylesheet" href="styles/Body_style.css">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
@@ -29,7 +29,7 @@
                     Courses
                 </button>
             </div>
-            <script src="../javascript/menuButton.js"></script>
+            <script src="javascript/menuButton.js"></script>
         </div>
         <hr id="Title_Border2">
         <div class="Body">
@@ -65,10 +65,7 @@
                 <div class="Subject_Field">
                     <h2>Available courses:</h2>
                         <ul>
-                            <li><a class="Subject_Links" href="../courses/SingleVariableCalc/pages/calculus1.html">Single Variable Calculus (work in progress)</a></li>
-                            <!-- <li>Multi Variable Calculus (not yet developed)</li>
-                            <li>Differential Equations (not yet developed)</li>
-                            <li>Linear Algebra (not yet developed)</li> -->
+                            <li><a class="Subject_Links" href="courses/SingleVariableCalc/pages/calculus1.html">Single Variable Calculus (work in progress)</a></li>
                         </ul>
                 </div>
             </div>
