--- a/courses/SingleVariableCalc/pages/calculus1.html
+++ b/courses/SingleVariableCalc/pages/calculus1.html
@@ -17,7 +17,7 @@
     </head>
     <body class="Whole">
         <div>
-            <button onclick="window.location.href='../../../landing/index.html'" class="Title_image"></button>
+            <button onclick="window.location.href='../../../index.html'" class="Title_image"></button>
             <button id="menuButton" class="menuButton" aria-controls="primary-navigation" aria-expanded="false">
                 <svg class="hamburger" viewBox="0 0 100 100" width="40" height="40">
                     <rect class="line top" width="80" height="10" x="10" y="25" rx="5"></rect>
