Added a 'Courses' page and initiated the Math Methods course

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </button>
             <hr id="Title_Border1">
             <div id="menu" class="menuClass">
-                <button onclick="window.location.href='#';" class="Top_Nav_Button">
+                <button onclick="window.location.href='courses/courses.html';" class="Top_Nav_Button">
                     Courses
                 </button>
             </div>
