--- a/courses/SingleVariableCalc/pages/LimitTechniques.html
+++ b/courses/SingleVariableCalc/pages/LimitTechniques.html
@@ -24,7 +24,7 @@
             </button>
             <hr id="Title_Border1">
             <div id="menu" class="menuClass">
-                <button onclick="window.location.href='#';" class="Top_Nav_Button">
+                <button onclick="window.location.href='../../courses.html';" class="Top_Nav_Button">
                     Courses
                 </button>
             </div>
